# rust-otel-async

./: Cargo.toml  README.md
src/: main.rs
