[package]
name = "rust-async-otel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.2.1"
awc = "3.0.1"
tokio = "1.22.0"
opentelemetry = { version = "0.18.0", features = ["rt-tokio-current-thread"] }
opentelemetry-otlp = { version = "0.11.0", features = ["tls-roots"] }
tonic = "0.8.3"
actix-web-opentelemetry = { version = "0.13.0", features = ["awc"] }
